--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,3 +1,6 @@
 {{ define "main" }}
-<article class="prose lg:prose-xl">{{ .Content }}</article>
+<article class="prose lg:prose-xl">
+  <h1>{{ .Title }}</h1>
+  {{ .Content }}
+</article>
 {{ end }}
