--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,8 @@
 {{ define "main" }}
 <div class="border-red-700 border-t-2">
-  <article class="prose lg:prose-xl">{{ .Content }}</article>
+  <article class="prose lg:prose-xl">
+    <h1>annatto</h1>
+    {{ .Content }}
+  </article>
 </div>
 {{ end }}
