--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
-<article class="prose lg:prose-xl">
-  <h1>{{ .Title }}</h1>
-  {{ .Content }}
-</article>
+  <article class="prose lg:prose-xl">
+    <h1 class="border-l-2 border-red-700 pl-2">{{ .Title }}</h1>
+    {{ .Content }}
+  </article>
 {{ end }}
