refactor: update services pages

--- a/layouts/services/list.html
+++ b/layouts/services/list.html
@@ -6,7 +6,7 @@
 
     <hr />
 
-    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-x-4">
+    <div class="grid grid-cols-1 sm:grid-cols-2 gap-x-4">
       {{- range $i, $page := .Pages }}
         {{- if (gt $i 0) }}
           <hr class="block sm:hidden" />
