--- a/layouts/shortcodes/button.html
+++ b/layouts/shortcodes/button.html
@@ -1,7 +1,7 @@
-<div class="p-3 {{ .Get "align" }}">
+<p class="p-3 {{ .Get "class" }}">
   <a
-    class="p-3 rounded bg-red-100 hover:bg-red-400 hover:text-white focus:outline-none focus:ring-2 focus:ring-red-200 focus:ring-opacity-50 {{ .Get "class" }}"
+    class="p-3 rounded bg-red-100 hover:bg-red-400 hover:text-white focus:outline-none focus:ring-2 focus:ring-red-200 focus:ring-opacity-50"
     href="{{- .Get "url" -}}"
     >{{- .Get "title" -}}</a
   >
-</div>
+</p>
